force-app/main/default/objects/Product2/fields/Banquet_Hall_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Banquet_Hall_Capacity__c</fullName>
    <description>Banquet Hall Capacity is the custom field that is used to store the capacity of that perticular banquet hall.</description>
    <label>Banquet Hall Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Hotel_Product_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>150</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>