force-app/main/default/objects/Product2/fields/Conference_Room_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Conference_Room_Capacity__c</fullName>
    <description>Conference Room Capacity is the custom field that is used to store the capacity of that Conference Room hall.</description>
    <label>Conference Room Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Hotel_Product_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>