force-app/main/default/objects/Product2/fields/Dining_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Dining_Capacity__c</fullName>
    <description>Dining Capacity is the custom field that is used to store the capacity of that Dining.</description>
    <label>Dining Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Hotel_Product_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>