force-app/main/default/objects/Product2/fields/Hotel__c.field-meta.xml
<CustomField>
    <fullName>Hotel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hotel is the lookup to Hotel Object, which describes the hotel product is related to which Hotel.</description>
    <label>Hotel</label>
    <referenceTo>Hotel__c</referenceTo>
    <relationshipLabel>Hotel Products</relationshipLabel>
    <relationshipName>Hotel_Products</relationshipName>
    <type>Lookup</type>
</CustomField>