force-app/main/default/objects/Product2/fields/Hotel_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Product_Type__c</fullName>
    <description>Hotel Product Type is the custom field of type Picklist that is used to store the type of the Hotel Product. i.e. : Room, Dining, Swimming pool, Banquet hall, Conference room.</description>
    <label>Hotel Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Room</fullName>
            </value>
            <value>
                <fullName>Dining</fullName>
            </value>
            <value>
                <fullName>Swimming Pool</fullName>
            </value>
            <value>
                <fullName>Banquet Hall</fullName>
            </value>
            <value>
                <fullName>Conference Room</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>