force-app/main/default/objects/Product2/fields/Max_No_Of_Guest__c.field-meta.xml
<CustomField>
    <fullName>Max_No_Of_Guest__c</fullName>
    <description>Displays the max number of guests this room can accommodate</description>
    <label>Max No Of Guest</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>