force-app/main/default/objects/Product2/fields/Product_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_Unit_Price__c</fullName>
    <description>Product Unit Price is the custom field that is used to store the Unit price of that perticular hotel product..</description>
    <label>Product Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>