force-app/main/default/objects/Product2/fields/Related_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Related_Hotel__c</fullName>
    <label>Related Hotel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>All_Hotels</valueSetName>
    </valueSet>
</CustomField>