force-app/main/default/objects/Product2/fields/Room_Area__c.field-meta.xml
<CustomField>
    <fullName>Room_Area__c</fullName>
    <description>Displays the sq m of the room.</description>
    <label>Room Area</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>