force-app/main/default/objects/Product2/fields/Swimming_Pool_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Swimming_Pool_Capacity__c</fullName>
    <description>Swimming Pool Capacity is the custom field that is used to store the capacity of that perticular Swimming Pool.</description>
    <label>Swimming Pool Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Hotel_Product_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>