force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Hotel__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>Product_Unit_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Hotel Products</label>
</ListView>