force-app/main/default/objects/Product2/listViews/Respira_Rooms.listView-meta.xml
<ListView>
    <fullName>Respira_Rooms</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Product_Unit_Price__c</columns>
    <columns>Total_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Hotel__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Respira Rooms</label>
    <sharedTo>
        <role>CEO</role>
    </sharedTo>
</ListView>